# identity

./: CMakeLists.txt  execute.sh  helper.c  helper.h  input.json  main.c  main.cpp  pattern.txt  smatcher.h  world192.txt
ac/: ac.c  ac.h
include/: Output.h  Parser.h  Timer.h
sbom/: sbom.c
sh/: sh.c
sog/: sog16.c  sog32.c  sog8.c
src/: Output.cpp  Parser.cpp
wu/: wu.c
